# moira

./: AGENTS.md  CONTEXT.md  LICENSE  README.md
.github/workflows/: ci.yml
apps/desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  theme.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/assets/: bsp
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/__tests__/: chart.test.ts  chart.test.tsx
apps/desktop/src/components/: AstrologyChart.tsx  BaziPanel.tsx  ChartManager.tsx  ElectionalForm.tsx  ErrorBoundary.tsx  InputForm.tsx  PlanetTable.tsx  shared.tsx
apps/desktop/src/types/: chart.ts
docs/: at-home-projects-moira-research.md
docs/adr/: 0001-flutter-to-tauri-migration.md  0002-phase2-feature-expansion.md  0003-concentric-ring-chart.md
docs/agents/: domain.md  issue-tracker.md  moira-rule-engine.md  star-poetry-database.md  triage-labels.md
docs/roadmap/: phase2-feature-parity.md  phase2-p0-implementation.md
moira-rs/: Cargo.toml  index.md
moira-rs/crates/moira-core/: Cargo.toml
moira-rs/crates/moira-core/src/: angles.rs  bazi.rs  eclipse.rs  lib.rs  lunar.rs  rule_engine.rs  shensha.rs  solar_terms.rs  utils.rs
moira-rs/src/: main.rs
